fixed history_chart left axis cutoff problem

--- a/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
+++ b/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
@@ -69,7 +69,7 @@ $dashboard-banner-chart-axis-font-color: $dashboard-stats-item-value-color !defa
   display: grid;
   grid-template-columns: repeat(var(--numChartData), 0.9fr);
   padding-bottom: 12px;
-  padding-left:55px;
+  padding-left:20px;
 
   .dashboard-banner-chart-legend-item {
     padding-bottom: 3px;
